# glue-genes

./: .gitignore  .readthedocs.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  index.html  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci_workflows.yml  python-package-conda.yml  python-package.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: style.css
docs/source/api/: glue_genomics_data.bed_factory.is_bed.rst  glue_genomics_data.bed_factory.read_bed.rst  glue_genomics_data.bigwig_factory.is_bigwig.rst  glue_genomics_data.bigwig_factory.read_bigwig.rst  glue_single_cell.anndata_factory.AnnDataListener.rst  glue_single_cell.anndata_factory.df_to_data.rst  glue_single_cell.anndata_factory.is_anndata.rst  glue_single_cell.anndata_factory.join_anndata_on_keys.rst  glue_single_cell.anndata_factory.read_anndata.rst  glue_single_cell.anndata_factory.setup_anndata.rst  glue_single_cell.anndata_factory.setup_gui_joins.rst  glue_single_cell.data.DataAnnData.rst  glue_single_cell.data.DataAnnDataTranslator.rst  glue_single_cell.qt.diff_gene_exp.DiffGeneExpDialog.rst  glue_single_cell.qt.diff_gene_exp.get_gene_list_diff_exp.rst  glue_single_cell.qt.enrichr.EnrichpyDialog.rst  glue_single_cell.qt.load_data.LoadDataDialog.rst  glue_single_cell.qt.pca_subset.GeneSummaryListener.rst  glue_single_cell.qt.pca_subset.PCASubsetDialog.rst  glue_single_cell.qtl_viewer.layer_artist.QTLLayerArtist.rst  glue_single_cell.qtl_viewer.state.QTLViewerState.rst  glue_single_cell.qtl_viewer.viewer.QTLViewer.rst  index.rst
docs/source/api/reference/: analysis.rst  imagingdata.rst  io.rst  singlecelldata.rst  viewers.rst
docs/source/api/reference/api/: glue_genes.glue_genomics_data.bed_factory.read_bed.rst  glue_genes.glue_genomics_data.bigwig_factory.read_bigwig.rst  glue_genes.glue_genomics_data.geojson_factory.read_geojson.rst  glue_genes.glue_genomics_data.multires_data.MultiResolutionData.rst  glue_genes.glue_genomics_data.multires_data.ReducedResolutionData.rst  glue_genes.glue_genomics_data.ome_zarr_factory.read_ome_zarr.rst  glue_genes.glue_genomics_data.openslide_factory.read_open_slide_as_zarr.rst  glue_genes.glue_genomics_data.spaceranger_factory.read_spaceranger_directory.rst  glue_genes.glue_genomics_data.tifffile_factory.read_tifffile_as_zarr.rst  glue_genes.glue_single_cell.anndata_factory.read_anndata.rst  glue_genes.glue_single_cell.data.DataAnnData.rst  glue_genes.glue_single_cell.data.DataAnnDataTranslator.rst  glue_genes.glue_single_cell.qt.diff_gene_exp.DifferentialGeneExpressionListener.rst  glue_genes.glue_single_cell.qt.diff_gene_exp.get_gene_diff_exp.rst  glue_genes.glue_single_cell.qt.diff_gene_exp.get_gene_list_diff_exp.rst  glue_genes.glue_single_cell.qt.pca_subset.GeneSummaryListener.rst  glue_genes.glue_single_cell.qt.pca_subset.do_calculation_over_gene_subset.rst  glue_genes.glue_single_cell.qt.summarize_gene_subset.GeneSummaryListener.rst  glue_genes.glue_single_cell.qt.summarize_gene_subset.do_calculation_over_gene_subset.rst  glue_genes.glue_single_cell.qtl_viewer.layer_artist.QTLLayerArtist.rst  (+13 more)
docs/source/getting-started/: index.rst
docs/source/how-to/: cells-to-genes.rst  data-in.rst  index.rst  installation.rst  linking-data.rst  linking-observations-and-images.rst  starting.rst  visualize-data.rst  visualize-expression-matrix.rst
docs/source/user-guide/: index.rst
glue_genes/glue_genomics_data/: __init__.py  bed_factory.py  bigwig_factory.py  geojson_factory.py  image_link_functions.py  multires_data.py  ome_zarr_factory.py  openslide_factory.py  spaceranger_factory.py  tifffile_factory.py  zarr_factory.py
glue_genes/glue_genomics_data/tests/: test_multi_resolution_data.py  test_ome_zarr_factory.py  test_spaceranger.py  test_tifffile_factory.py
glue_genes/glue_genomics_data/tests/test_spatial_data/: README.txt
glue_genes/glue_single_cell/: __init__.py  anndata_factory.py  component.py  data.py  menubar_plugin.py  state.py
glue_genes/glue_single_cell/qt/: diff_gene_exp.py  diff_gene_exp.ui  enrichr.py  enrichr.ui  load_data.py  load_data.ui  pca_subset.py  pca_subset.ui  summarize_gene_subset.py  summarize_gene_subset.ui
glue_genes/glue_single_cell/qt/tests/: test_data_load.py  test_diff_gene_exp.py  test_enrichr.py  test_pca_subset.py  test_summarize_gene_subset.py
glue_genes/glue_single_cell/qtl_viewer/: layer_artist.py  viewer.py
glue_genes/glue_single_cell/qtl_viewer/qt/: layer_style_editor.py  layer_style_editor.ui  options_widget.py  options_widget.ui
glue_genes/glue_single_cell/qtl_viewer/tests/: test_qtl_data_viewer.py
glue_genes/glue_single_cell/tests/: test_data_math.py  test_synccomponent.py
glue_genes/glue_single_cell/tests/test_data/: test_data.h5ad  test_dataset.h5ad  test_dataset_float32.h5ad
glue_genes/scatter_viewer/qt/: __init__.py  data_viewer.py  layer_style_editor.py  layer_style_editor.ui  options_widget.py  options_widget.ui
glue_genes/scatter_viewer/qt/tests/: test_data_viewer.py  test_python_export.py
glue_genomics_data/: __init__.py  bed_factory.py  bigwig_factory.py
glue_single_cell/: __init__.py  __main__.py  anndata_factory.py  data.py  menubar_plugin.py  state.py
glue_single_cell/qt/: diff_gene_exp.py  diff_gene_exp.ui  enrichr.py  enrichr.ui  load_data.py  pca_subset.py
glue_single_cell/qt/tests/: test_data_load.py  test_diff_gene_exp.py  test_enrichr.py  test_pca_subset.py
glue_single_cell/qt/tests/data/: test_data_compressed.h5ad
glue_single_cell/qtl_viewer/: layer_artist.py  state.py  viewer.py
glue_single_cell/qtl_viewer/qt/: layer_style_editor.py  options_widget.py  slider_with_label_widget.ui
glue_single_cell/qtl_viewer/tests/: test_qtl_data_viewer.py
glue_single_cell/tests/: context.py  test_data_math.py
site/html5up-arcana/: README.txt
(+6 files in other folders)
