[metadata]
name = glue-genes
url = https://www.gluesolutions.io
author = glue solutions inc.
author_email = jfoster@gluesolutions.io
classifiers = 
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Multidimensional data visualization for genomics
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    glue-core>=1.6
    glue-small-multiples@git+https://github.com/gluesolutions/glue-small-multiples.git
    glue-heatmap@git+https://github.com/gluesolutions/glue-heatmap.git
    glue-vispy-viewers
    anndata
    scanpy
    enrichrpy
    pyranges

[options.entry_points]
glue.plugins =
    glue_single_cell = glue_single_cell:setup
	glue_genomics_data = glue_genomics_data:setup

[options.extras_require]
qt =
    PyQt5>=5.9
test =
    pytest
docs = 
    sphinx
    numpydoc
    sphinx_design
    furo

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.xlsx, *.txt, *.csv, *.svg, *.bgz, *.tbi *.h5ad

[flake8]
exclude = .git
max-line-length = 119

[tool.interrogate]
ignore-init-module = true
exclude = setup.py,docs,build
ignore-regex = "*setup*", "^mock_.*", ".*BaseClass.*"
