[metadata]
name = glue-genes
provides = glue_genes
url = https://gluesolutions.github.io/glue-genes/
author = glue solutions inc.
author_email = jfoster@gluesolutions.io
classifiers = 
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Multidimensional data visualization for genomics
long_description = file: README.md
long_description_content_type= text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    glue-core-for-glue-genes
    qtpy>=1.9
    anndata>=0.8
    scanpy>=1.9
    enrichrpy>=0.1
    pyranges>=0.0.120
    squidpy
    zarr>=2
    ome-zarr
    tifffile
    numpy<=1.24 # We have to pin this because of numba

[options.entry_points]
glue.plugins =
    glue_single_cell = glue_genes.glue_single_cell:setup
	glue_genomics_data = glue_genes.glue_genomics_data:setup

[options.extras_require]
docs =
    sphinx
    sphinxcontrib-spelling
    numpydoc
    pytest-doctestplus
    sphinx_design
    furo
test =
    pytest
    pytest-cov
    pytest-faulthandler
    pytest-flake8
    pytest-doctestplus
    mock
qt5 =
    PyQt5>=5.15
qt6 =
    PyQt6==6.4.*
    pyqt6-qt6==6.4.* # PyQt6.5 does not work yet
openslide =
    openslide-python # Only(?) available through Conda unless OpenSlide already installed
    napari-lazy-openslide



[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.xlsx, *.txt, *.csv, *.svg, *.bgz, *.tbi, *.h5ad

[tool:pytest]
minversion = 6
xfail_strict = true
filterwarnings =
    error
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore::PendingDeprecationWarning:xlrd
    ignore:Session._key_changed is deprecated
    ignore:zmq.* is deprecated
    ignore:can't be aliased because it is another magic command
    ignore:DragAndDropTerminal._style_sheet_changed is deprecated
    ignore:::ipykernel
    ignore:::anndata
    ignore:Accessing zmq Socket attribute
    ignore:'U' mode is deprecated:DeprecationWarning:PyQt5
    ignore::DeprecationWarning
    ignore::FutureWarning


[flake8]
max-line-length = 120
